[package]
name = "rust-mod-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["blocking"] }
json = { version = "0.12.4" }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.120" }
clap = { version = "4.5.9", features = ["derive"] }
log = { version = "0.4.22" }
flexi_logger = { version = "0.28.5", features = ["colors"] }
once_cell = { version = "1.19.0" }
dirs = { version = "5.0.1" }
